--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Hello Rails#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
+<%= link_to 'My Blog', controller: 'articles'%>
+<%# Note:- key controller is not required if you are in same views %>
