--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,32 +7,11 @@
   <strong>Text:</strong>
   <%= @article.text%>
 </p>
+<%# rendering partial here  %>
+<%= render @article.comments %>
+
 <h2> Add a comment </h2>
-<%# display comments %>
-<% @article.comments.each do |comment| %>
-  <p>
-    <strong>Commenter:</strong>
-    <%= comment.commenter %>
-  </p>
-  <p>
-    <strong>Comment:</strong>
-    <%= comment.body %>
-  </p>
-<% end %>
-<%# The form will build nested route /articles/1/comments link %>
-<%= form_with(model: [@article,@article.comments.build ], local: true) do |form| %>
-  <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter%>
-  </p>
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+<%= render 'comments/form' %>
 
 <%= link_to 'Edit', edit_article_path(@article) %>
 <%= link_to 'Back', articles_path%>
